Replace raw foreign key value in feedbacks with primary descriptors

--- a/app/views/feedback_templates/index.html.erb
+++ b/app/views/feedback_templates/index.html.erb
@@ -58,7 +58,7 @@
 
         <!-- Display feedback.user_id start -->
         <td>
-          <%= feedback.user_id %>
+          <%= feedback.user.email %>
         </td>
         <!-- Display feedback.user_id end -->
 
